# polkadot_multisender

./: Cargo.toml  README.md  test_transfers.csv
src/: cli.rs  main.rs  transfer.rs
