[package]
edition = "2021"
name = "polkadot_multisender"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
csv = { version="1.1"}
subxt="0.18.1"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
sp-keyring = "6.0.0"
env_logger = "0.9.0"
futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"